<resources>
    <string name="app_name">Assessment</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">LOG IN</string>
    <string name="home">Home</string>
    <string name="password_message">Password length should contain minimum of 8 characters and contain number, lowercase, uppercase and special character.</string>

</resources>
